:boom: fix: navigation bar content spacing

--- a/resources/stylesheet.css
+++ b/resources/stylesheet.css
@@ -12,27 +12,30 @@ header.site-header {
     overflow: hidden;
     color: white;
     width: 100%;
-    height: 40px;
+    height: flex;
     border-top-left-radius: 0px;
     border-top-right-radius: 0px;
     text-align: center;
 }
 
 nav.bar {
-    position: relative;
+    font-size: medium;
+    position: top;
     background-color: #336588;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    height: auto;
 }
 
 main {
-    --horizontal-margin: 25%;
-    overflow: scroll;
+    margin-top: 35px;
+    overflow: hidden;
     color-scheme: dark;
     color: white;
     background-color: #1e1e1f;
+    margin-left: 16px;
 }
 
 body {
@@ -42,24 +45,24 @@ body {
     background-color: #1e1e1f;
     margin: auto;
     width: 100%;
-    left: 16px;
 }
 
 h1 {
     font-size: 21.5px;
 }
 
-ul {
-    float: right;
+ul.nav-list {
     list-style-type: none;
     overflow: hidden;
     padding: 0;
+    text-align: center;
 }
 
-li {
+li.nav-link {
     float: left;
     display: list-item;
-    text-align: match-parent;
+    margin-left: 16px;
+    margin-top: 0;
 }
 
 h2 {
@@ -90,6 +93,7 @@ bold {
 }
 
 user-name {
+    position: flex;
     font-size: 26px;
     font-style: bolder !important;
     font-weight: bolder !important;
@@ -130,7 +134,6 @@ links {
     border: 4px solid #3a4750;
     border-radius: 8px;
     background-color: #343c42;
-    border-spacing: 32px;
 }
 
 social-link {
@@ -140,7 +143,6 @@ social-link {
     border: 4px solid #3a4750;
     border-radius: 8px;
     background-color: #343c42;
-    border-spacing: 32px;
 }
 
 div.projects {
